--- a/medium.css
+++ b/medium.css
@@ -11,16 +11,16 @@
     position: fixed;
     box-sizing: border-box;
     width: 100%;
-    padding-bottom: 100px;
-    z-index: 1000;
     
 }
 .mediumlogo{
     background-size: cover;
     background-image:url("medium.png");
+    background-size: contain;
+    background-repeat: no-repeat;
     width: 161px;
-    height: 30px;
-    
+    height: 40px;
+    box-sizing: inherit;
 }
 .freespace{
     width: 614px;
@@ -49,29 +49,30 @@
     color: white;
     font-weight: 550;
     border: none;
+    cursor: pointer;
 }
 .a{
     color: black;
 }
 .midpage{
     width: 100%;
-    /* margin-top: 76.8px; */
-    height: 454px;
+    padding-top: 76.8px;
+    height: 530px;
     background-color:rgba(255,192,23,255);
     display: flex;
+    box-sizing: border-box;
 }
 .midcontainer{
     display: flex;
     justify-content: space-evenly;
+    box-sizing: border-box;
 }
 .lefthalf{
-    
     width: 540px;
     padding-left: 11%;
     align-items: center;
     justify-content: center;
     display: flex;
-    
 }
 
 .righthalf{
@@ -82,13 +83,8 @@
 }
 .texts{
     width: 550px;
-    height:454px;
-    box-sizing: border-box;
-    padding-top: 93px;
-    padding-bottom: 92px;
+    
     text-align: left;
-    display: flex;
-    flex-direction: column;
 }
 .stayserious{
     font-size: 100px;
@@ -112,7 +108,180 @@
     width: 213px;
     font-weight: bold;
     font-size: large;
+    cursor: pointer;
 }
 .startreading{
     height: 42px;
+}
+.order{
+    border: 1px solid black;
+}
+.box{
+    height: 123px;
+    width: 376.33px;
+    padding: 14px;
+    box-sizing: border-box;
+    display: flex;
+}
+.sno{
+    font-size: 32px;
+    color: #f2f2f2;
+    margin-right: 16px;
+}
+.xyz{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.secondhalf{
+    height: 348px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content:center;
+    margin-top: 40px;
+    margin-bottom: 16px;
+
+}
+.secondhalf_content{
+    width: 1328px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+.secondhalf_contentbox{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    height: 247px;
+    width: 1192px;
+}
+.secondhalf_heading1{
+    margin-bottom: 16px;
+    font-size: 16px;
+    height: 29px;
+}
+.fontfamily{
+    font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+a{
+    color: black;
+    text-decoration:none;
+}
+.name{
+    font-size: 13px;
+    padding-bottom: 4px;
+    font-weight: bold;
+}
+.text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: space-evenly;
+}
+.datetime{
+    display: flex;
+    flex-direction: row;
+    font-size: 13px;
+}
+.thirdhalf{
+    height: 1200px;
+    width: 100%;
+    box-sizing: border-box;
+    padding-top: 53px;
+    display: flex;
+    justify-content: center;
+}
+.thirdhalf_lefthalf{
+    width: 695px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    box-sizing: border-box;
+}
+.thirdhalf_righthalf{
+    width: 397px;
+    margin-left: 98px;
+}
+.boxtype2{
+    height: 134px;
+    width: 694px;
+    box-sizing: border-box;
+    display: flex;
+    
+}
+.photo{
+    width: 200px;
+    height: 134px;
+    
+}
+.photo img{
+    max-width: 100%;
+    height: 100%;
+}
+.gap{
+    width: 246px;
+}
+.maintext{
+    font-size: 16px;
+}
+.maintext2{
+    font-size: 20px;
+}
+.inner{
+    width: 397px;
+    height: 348px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.up{
+    height: 247px;
+}
+.down{
+    height: 56px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.minibox{
+    height: 20px;
+    
+    padding-right: 26px;
+    padding-bottom: 8px;
+}
+.miniboxtxt{
+    font-size: 14px;
+    color: #6B6B6B;
+    font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 400;
+}
+.minibox2{
+    background-color: #f2f2f2;
+    color: #242424;
+    border-radius: 100px;
+    height: 20px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin-right: 8px;
+    margin-bottom: 10px;
+}
+.boxes{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.heading2{
+    height: 20px;
+    padding-bottom: 16px;
+    font-weight: bold;
+    font-family: medium-content-sans-serif-font, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.seemore{
+    color: #1A8917;
+    font-size: 14px;
+    font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 500;
 }
