--- a/medium.css
+++ b/medium.css
@@ -1,6 +1,9 @@
 *{
     margin: 0;
 }
+html{
+    overflow-x: hidden;
+}
 .navigationbar{
     height: 76px;
     display: flex;
@@ -8,9 +11,9 @@
     border-bottom: 1px solid black;
     background-color: rgba(255,192,23,255);
     align-items: center;
-    position: fixed;
+    /* position: fixed; */
     box-sizing: border-box;
-    width: 100%;
+    justify-content: space-evenly;
     
 }
 .mediumlogo{
@@ -64,7 +67,9 @@
 }
 .midcontainer{
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
     box-sizing: border-box;
 }
 .lefthalf{
@@ -76,7 +81,8 @@
 }
 
 .righthalf{
-    padding-left: 380px;
+
+    
     width: 585px;
     background: cover;
     background-image: url("MMM.png");
@@ -142,18 +148,17 @@
     margin-bottom: 16px;
 
 }
-.secondhalf_content{
-    width: 1328px;
-    height: 100%;
+/* .secondhalf_content{
+   
     display: flex;
     justify-content: center;
-}
+} */
 .secondhalf_contentbox{
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
     height: 247px;
-    width: 1192px;
 }
 .secondhalf_heading1{
     margin-bottom: 16px;
