--- a/medium.css
+++ b/medium.css
@@ -1,17 +1,19 @@
 *{
     margin: 0;
 }
-html{
+/* html{
     overflow-x: hidden;
-}
+} */
 .navigationbar{
+    z-index: 2;
     height: 76px;
+    width: 100%;
     display: flex;
     justify-content: center;
     border-bottom: 1px solid black;
     background-color: rgba(255,192,23,255);
     align-items: center;
-    /* position: fixed; */
+    position: fixed;
     box-sizing: border-box;
     justify-content: space-evenly;
     
@@ -101,8 +103,9 @@ html{
     font-weight: 400;
 }
 .discover{
-    font-size: 27px;
-    font-weight: 400;
+    font-size: 16px;
+    font-weight: 500;
+    color: #242424;
     margin-bottom: 50px;
     box-sizing: content-box;
 }
@@ -135,11 +138,11 @@ html{
     color: #f2f2f2;
     margin-right: 16px;
 }
-/* .xyz{
+.xyz{
     display: flex;
     justify-content: center;
     flex-direction: column;
-} */
+}
 .secondhalf{
     height: 348px;
     display: flex;
@@ -240,6 +243,7 @@ a{
 }
 .up{
     height: 247px;
+    justify-content: left;
 }
 .down{
     height: 56px;
