--- a/medium.css
+++ b/medium.css
@@ -106,7 +106,7 @@
     font-size: 16px;
     font-weight: 500;
     color: #242424;
-    margin-bottom: 50px;
+    margin-bottom: 10%;
     box-sizing: content-box;
 }
 .startreadingbutton{
@@ -129,7 +129,7 @@
 .box{
     height: 123px;
     width: 376.33px;
-    padding: 14px;
+    padding: 1.3%;
     box-sizing: border-box;
     display: flex;
 }
