--- a/medium.css
+++ b/medium.css
@@ -104,7 +104,15 @@
 }
 .discover{
     font-size: 24px;
-    font-weight: 500;
+    font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #242424;
+    font-weight: 400;
+    margin-bottom: 10%;
+    box-sizing: content-box;
+}
+.discover2{
+    font-size: 16px;
+    font-weight: bolder;
     color: #242424;
     margin-bottom: 10%;
     box-sizing: content-box;
@@ -192,28 +200,28 @@ a{
 }
 .thirdhalf{
     height: 1200px;
-    width: 100%;
     box-sizing: border-box;
     padding-top: 53px;
     display: flex;
     justify-content: center;
+    
 }
 .thirdhalf_lefthalf{
-    /* width: 695px; */
+    
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     box-sizing: border-box;
 }
 .thirdhalf_righthalf{
-    width: 397px;
-    margin-left: 98px;
+    margin-right: 12%;
 }
 .boxtype2{
     height: 134px;
     width: 694px;
     box-sizing: border-box;
     display: flex;
+    padding-left: 4%;
     
 }
 .photo{
@@ -240,6 +248,7 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+
 }
 .up{
     height: 247px;
