--- a/medium.css
+++ b/medium.css
@@ -4,19 +4,26 @@
 /* html{
     overflow-x: hidden;
 } */
-.navigationbar{
+
+.outernavbar{
     z-index: 2;
     height: 76px;
     width: 100%;
     display: flex;
-    justify-content: center;
+    position: fixed;
+    box-sizing: border-box;
+    
+}
+.navigationbar{
+    width: 100%;
+    display: flex;
+    padding-left: 10%;
+    padding-right: 10%;
+    justify-content: space-between;
     border-bottom: 1px solid black;
     background-color: rgba(255,192,23,255);
     align-items: center;
-    position: fixed;
     box-sizing: border-box;
-    justify-content: space-evenly;
-    
 }
 .checkbox{
     display: none;
@@ -40,7 +47,7 @@
     justify-content: center;
     justify-content: space-evenly;
     height: 25px;
-    width: 416px;
+    width: 417px;
 }
 .getstartedbox{
     background-color: black;
